--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <a
                   class="link"
                   target="blank"
-                  href="https://www.linkedin.com/in/adithyanmadhu/"
+                  href="https://www.instagram.com/sc0pophobic/"
                   >INSTAGRAM</a
                 >
               </button>
