--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"
     ></script>
-    <title>Port To Adithyan</title>
+    <title>scopo-link</title>
     <link rel="stylesheet" href="style.css" />
 
     <link
